# docextractor-internal_pipline_logic

./: .gitignore  New Text Document.txt  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0dafcca0b4c6_add_document_task_chunk_tables.py  1ba032ea912a_seeding_process_type_table.py  2ce70f64a2ed_initial_tables.py
src/: main.py
src/app_logger/: conf.json  manager.py
src/asr/: __init__.py  router.py  schemas.py  services.py  tasks.py
src/auth/: dependency.py
src/core/: settings.py  worker.py
src/db/: crud.py  dependency.py  enums.py  manager.py  models.py
src/embedding_pipeline/: schemas.py
src/force_stop/: router.py
src/normal_document/: config.py  router.py  schemas.py  services.py  tasks.py
src/utilities/: aes_utility.py  minio_utility.py
src/utilities/datetime/: utc_datetime.py
