[project]
name = "docextractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.5",
    "celery[redis]==5.5.3",
    "fastapi[standard]==0.116.1",
    "minio==7.2.16",
    "pyodbc==5.2.0",
    "sqlalchemy==2.0.43",
    "openai>=1.43.0",
]
